--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
         <version.jre>11.0.2</version.jre>
         <version.jansi>1.18</version.jansi>
         <version.gson>2.8.6</version.gson>
-        <version.clickhouse-jdbc>0.2.3</version.clickhouse-jdbc>
+        <version.clickhouse-jdbc>1.4.4</version.clickhouse-jdbc>
     </properties>
 
     <dependencyManagement>
@@ -346,8 +346,8 @@
                 <optional>true</optional>
             </dependency>
             <dependency>
-                <groupId>ru.yandex.clickhouse</groupId>
-                <artifactId>clickhouse-jdbc</artifactId>
+                <groupId>cc.blynk.clickhouse</groupId>
+                <artifactId>clickhouse4j</artifactId>
                 <version>${version.clickhouse-jdbc}</version>
                 <optional>true</optional>
             </dependency>
